--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,52 @@ body {
 .section-1-button:focus{
 background-color: #155c95;
 }
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, 0.1) ;
+  z-index: 999;
+}
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+}
+.button-icon{
+ 
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #EEEEEE;
+  background-color: #fff;
+  margin-right: 8px;
+  margin-top: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-1-close-icons{
+  
+
+
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: #fff;
+  display: flex;
+  justify-content: flex-end;
+ 
+  
+}
 /* section 2 */
 .section-2{
   padding-top: 94px;
