--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,7 @@ body {
 }
 .link { 
   text-decoration: none;
-  transition-property: color, background-color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
+  
 }
 .link.active {
   color: var(--accent-color);
@@ -103,6 +100,9 @@ body {
   letter-spacing: 0.02em;
 
   color: var(--first-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav-item-2 {
   display: block;
@@ -114,6 +114,9 @@ body {
   letter-spacing: 0.02em;
 
   color: var(--first-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav-item-3 {
   display: block;
@@ -125,6 +128,9 @@ body {
   letter-spacing: 0.02em;
 
   color: var(--first-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-logo {
@@ -156,7 +162,9 @@ body {
 }
 .header-item {
   position: relative;
+ 
 }
+
 
 .active::after {
   position: absolute;
@@ -185,13 +193,18 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .mail-icon {
   fill: var(--second-text-color);
  
   margin-right: 10px;
-
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-tel-link {
@@ -205,7 +218,9 @@ body {
   letter-spacing: 0.02em;
   color: var(--second-text-color);
 }
+.mail-tel{
 
+}
 
 .mail-tel:hover{
   color: var(--accent-color);
@@ -637,10 +652,15 @@ padding-bottom: 30px;
   align-items: center;
   justify-content: center;
 
-  
+  transition-property:background-color ;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .employee-soc-icons{
   fill:#AFB1B8 ;
+  transition-property:fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .employee-soc-link:hover{
   background-color: var(--accent-color);
@@ -789,9 +809,8 @@ padding-bottom: 30px;
 .footer-icon-item{
   display: flex;
   align-items: center;
- justify-content: space-around;
-}
-.footer-icon-item{
+ justify-content: center;
+
   width: 44px;
   height: 44px;
   border-radius: 50%;
