--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,7 @@ body {
 transition-property: background-color;
 transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transform: translate(5000ms);
 }
 .section-1-button:hover {
   background-color: #155c95;
@@ -296,12 +297,15 @@ background-color: #155c95;
   width: 100%;
   height: 100%;
   background-color:rgba(0, 0, 0, 0.1) ;
-  z-index: 999;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
+  
 }
+
 .button-icon{
  
   width: 30px;
@@ -321,7 +325,7 @@ background-color: #155c95;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+ 
   min-width: 528px;
   min-height: 581px;
 
@@ -329,6 +333,9 @@ background-color: #155c95;
   display: flex;
   justify-content: flex-end;
  
+  transform:translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   
 }
 /* section 2 */
@@ -848,6 +855,7 @@ padding-bottom: 30px;
 .fierst-portfolio-item:not( :last-child) {
   margin-right: 8px;
 }
+
 .portfolio-button {
   
   background-color: var(--btn-color-porfolio);
@@ -861,9 +869,7 @@ padding-bottom: 30px;
   cursor: pointer;
   padding: 6px 22px;
 
-  transition-property: background-color;
- transition-duration: 250ms;
- transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
+ 
   
 }
 
@@ -877,7 +883,7 @@ padding-bottom: 30px;
   color: #ffffff;
 }
 .effect-btn-shadow{
-  transition-property:box-shadow;
+  transition-property:box-shadow,background-color,color ;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
