--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ background-color: #155c95;
   position: absolute;
   top: 50%;
   left: 50%;
- 
+  transform:translate(-50%, -50%)
   min-width: 528px;
   min-height: 581px;
 
@@ -333,9 +333,7 @@ background-color: #155c95;
   display: flex;
   justify-content: flex-end;
  
-  transform:translate(-50%, -50%) scale(1);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  
   
 }
 /* section 2 */
