--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ background-color: #155c95;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform:translate(-50%, -50%)
+  transform:translate(-50%, -50%);
   min-width: 528px;
   min-height: 581px;
 
