--- a/css/style.css
+++ b/css/style.css
@@ -809,10 +809,6 @@ padding-bottom: 30px;
   margin-left: 10px;
 }
 .footer-icon-item{
-  display: flex;
-  align-items: center;
- justify-content: center;
-
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -822,7 +818,13 @@ padding-bottom: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-
+.footer-icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .footer-icon-item:hover{
   background-color: var(--accent-color);
 }
